# DataStructure

./: CMakeCache.txt  CMakeLists.txt  DataStructures  Leia-me.txt  Makefile  README.md  cmake_install.cmake  tests.txt
.cmake/api/v1/reply/: cache-v2-42ebc115949191d205cd.json  cmakeFiles-v1-52f9b657b1158ed7003a.json  codemodel-v2-0203f01f86fdfceb605e.json  index-2022-06-16T17-34-22-0785.json  target-DataStructures-Debug-33ca02c60b6642ce36ca.json
src/: main.c
src/libs/List/: List.c  List.h
src/libs/Node/: Node.c  Node.h
src/libs/Queue/: Queue.c  Queue.h
src/libs/Stack/: Stack.c  Stack.h
src/libs/gfx/: gfx.c  gfx.h
